--- a/apps/server/.gitignore
+++ b/apps/server/.gitignore
@@ -8,9 +8,12 @@
 .idea/usage.statistics.xml
 .idea/shelf
 
-# deps
-node_modules/
-
+node_modules
+.DS_Store
+dist
+dist-ssr
+coverage
+*.local
 # env
 .env
 .env.production
@@ -26,4 +29,3 @@ lerna-debug.log*
 
 # misc
 .DS_Store
-dist/
